Move the comment with the CVS Id below the <html> tag. This fixes bug
2003-09-22  Raphael Quinet  <quinet@gamers.org>

	* includes/wgo-xhtml-init.xhtml: Move the comment with the CVS Id
	below the <html> tag.  This fixes bug #122932.

	* Makefile: Add current working directory as prefix because using
	only programmatic: was causing problems with some older versions
	of GNU make.

	* programmatic/downloads/Makefile (install): create the downloads
	directory in the DocumentRoot in order to avoid problems during
	the first-time installation.

	* programmatic/tools/rewrite_attrs.py (xhtml_parser): Modify the
	code so that it waits until the first HTML comment in the input
	before inserting its own comment.  This fixes one part of bug
	#122932.  Also added the option "-s" to strip out the HTML
	comments from the output.

--- a/programmatic/downloads/Makefile
+++ b/programmatic/downloads/Makefile
@@ -11,4 +11,5 @@ clean:
 	/bin/rm -f mirrors.xhtml
 
 install: mirrors.xhtml
+	-mkdir `${PYTHON} -c 'import wgo_config; print wgo_config.DocumentRoot_path'`/downloads
 	install --mode=644 mirrors.xhtml `${PYTHON} -c 'import wgo_config; print wgo_config.DocumentRoot_path'`/downloads/mirrors.xhtml
