about/.cvsignore programmatic/admin/.cvsignore
2003-09-22  Raphael Quinet  <quinet@gamers.org>

	* about/.cvsignore
	* programmatic/admin/.cvsignore
	* programmatic/admin/news/.cvsignore
	* programmatic/contest/.cvsignore: Regenerated.

	* contest/.cvsignore
	* resources/.cvsignore
	* resources/brushes/.cvsignore
	* resources/gradients/.cvsignore
	* resources/palettes/.cvsignore
	* resources/patterns/.cvsignore: Added, as a consequence of the
	previous renaming of some .html files to .htrw in a previous
	commit.  Files generated with "make cvsignore".

--- a/about/.cvsignore
+++ b/about/.cvsignore
@@ -1,7 +1,11 @@
 ancient_history.html
+authors.html
 history.html
 index.html
 introduction.html
 linking.html
 screenshots.html
+splash-1.1.html
+splash-1.3.html
+splash-cvs.html
 splash-stable.html
