Disabled building and installation of ChangeLogs.
2003-09-22  Raphael Quinet  <quinet@gamers.org>

	* programmatic/about/Makefile: Disabled building and installation
	of ChangeLogs.

--- a/programmatic/about/Makefile
+++ b/programmatic/about/Makefile
@@ -3,7 +3,10 @@
 include ../Makefile.defs
 CSSFLAGS=-I../
 
-all: usage ChangeLogs
+# ChangeLogs should not be built because a different mechanism will be used
+# in the future.
+#all: usage ChangeLogs
+all: usage
 
 usage:
 	@if [ ${DocumentRoot} = "" ]; then echo "USAGE: make DocumentRoot=<DocumentRoot> target"; exit 1; fi
@@ -15,7 +18,10 @@ clean mrproper:
 	(cd ChangeLogs ; $(MAKE) clean)
 	/bin/rm -f *.pyc *~
 
-install: install-first install-ChangeLogs
+# ChangeLogs should not be installed because a different mechanism will be used
+# in the future.
+# install: install-first install-ChangeLogs
+install:
 
 install-first: all
 
