modifications to install.sh to use bash and source a configuration file
2004-03-15  Shawn T. Amundson <amundson@gimp.org>

        * M .cvsignore
          M Makefile
          A install.config.sample
          M install.exclude
          M install.sh
          M programmatic/Makefile
          M programmatic/about/ChangeLogs/Makefile
          M programmatic/admin/Makefile
          M programmatic/admin/contest/Makefile
          M programmatic/admin/develop/Makefile
          M programmatic/admin/news/Makefile
          M programmatic/contest/Makefile
          M programmatic/develop/Makefile
          M programmatic/downloads/Makefile: modifications to install.sh
        to use bash and source a configuration file (install.config);
        modifications to Makefiles to work with FreeBSD (install -m instead
        of install --mode) and use $(MAKE) instead of "make".  Also changed
        from $DocumentRoot/var/spool/... to $DataRoot/ for files which are
        to be owned by webserver.

        * M team.htrw: change Carol from "Contributor" to "Web Guru";
        changed; remove "Former Web Coordinator" line; change Raphael
        from "Web Coordinator" to "Web Guru"; added me as a Contributor.

--- a/programmatic/Makefile
+++ b/programmatic/Makefile
@@ -30,8 +30,8 @@ wgo_config.py: Makefile Makefile.defs
 	 echo "admin_path='${DocumentRoot}' + admin_dir"              ; \
 	 echo "includes_dir='/includes/'"                             ; \
 	 echo "includes_path='${DocumentRoot}' + includes_dir"        ; \
-	 echo "spool_dir='/var/spool/' # must end in trailing /"      ; \
-	 echo "spool_path='${DocumentRoot}' + spool_dir # must end in trailing /" ; \
+	 echo "spool_dir='/' # must end in trailing /"      ; \
+	 echo "spool_path='${DataRoot}' + spool_dir # must end in trailing /" ; \
 		echo                                                         ; \
 	 echo "debug=0"                                               ; \
 	 echo "validate=True"                                         ; \
@@ -70,7 +70,7 @@ clean mrproper:
 install: install-common install-admin install-contest install-about install-develop install-downloads
 
 install-common: all
-	install --mode=755 -d ${LIBDIR}
+	install -m 755 -d ${LIBDIR}
 	sed -e 's|$${PYTHON}|${PYTHON}|g' -e 's|$${LIBDIR}|${LIBDIR}|g' wgo.py        > ${LIBDIR}/wgo.py
 	sed -e 's|$${PYTHON}|${PYTHON}|g' -e 's|$${LIBDIR}|${LIBDIR}|g' wgo_develop.py        > ${LIBDIR}/wgo_develop.py
 	sed -e 's|$${PYTHON}|${PYTHON}|g' -e 's|$${LIBDIR}|${LIBDIR}|g' apache_ssi.py > ${LIBDIR}/apache_ssi.py
@@ -79,8 +79,8 @@ install-common: all
 	sed -e 's|$${PYTHON}|${PYTHON}|g' -e 's|$${LIBDIR}|${LIBDIR}|g' x_xml.py      > ${LIBDIR}/x_xml.py
 	sed -e 's|$${PYTHON}|${PYTHON}|g' -e 's|$${LIBDIR}|${LIBDIR}|g' changelog.py  > ${LIBDIR}/changelog.py
 	install            wgo_config.py ${LIBDIR}
-	install --mode=644 extended.css  ${DocumentRoot}/style/
-	install --mode=644 rdf-news.css  ${DocumentRoot}/style/
+	install -m 644 extended.css  ${DocumentRoot}/style/
+	install -m 644 rdf-news.css  ${DocumentRoot}/style/
 
 install-admin: admin
 	$(MAKE) -C admin install
