programmatic/admin/news/Makefile programmatic/admin/news/wgo_news.py allow
2004-12-19  Sven Neumann  <sven@gimp.org>

	* programmatic/admin/news/Makefile
	* programmatic/admin/news/wgo_news.py
	* programmatic/admin/news/wilber_reading.png: allow to use the new
	icon from the news system.

--- a/programmatic/admin/news/Makefile
+++ b/programmatic/admin/news/Makefile
@@ -80,6 +80,7 @@ install-news: all
 	install icons/release-0.1.png            `${PYTHON} -c 'import news_config; print news_config.icon_path'`
 	install icons/release-dev.png            `${PYTHON} -c 'import news_config; print news_config.icon_path'`
 	install icons/wilber_painter.png         `${PYTHON} -c 'import news_config; print news_config.icon_path'`
+	install icons/wilber_reading.png         `${PYTHON} -c 'import news_config; print news_config.icon_path'`
 	install icons/wilber_wizard.png          `${PYTHON} -c 'import news_config; print news_config.icon_path'`
 	install icons/wilber_work.png            `${PYTHON} -c 'import news_config; print news_config.icon_path'`
 
