.cvsignore about/splash/contest/.cvsignore
2005-01-16  Raphael Quinet  <raphael@gimp.org>

	* .cvsignore
	* about/splash/contest/.cvsignore
	* about/splash/splash-images/.cvsignore
	* donating/.cvsignore
	* tutorials/Sketch_Effect/.cvsignore
	* unix/howtos/.cvsignore: Regenerated with "make cvsignore".

--- a/.cvsignore
+++ b/.cvsignore
@@ -1,8 +1,8 @@
+archive.html
 index.html
+install.config
 mail_lists.html
 make.out
 team.html
 template.html
 webmasters.html
-install.config
-install.config
