--- a/programmatic/admin/news/Makefile
+++ b/programmatic/admin/news/Makefile
@@ -79,6 +79,7 @@ install-news: all
 	install icons/gimp_construction.png      `${PYTHON} -c 'import news_config; print news_config.icon_path'`
 	install icons/release-0.1.png            `${PYTHON} -c 'import news_config; print news_config.icon_path'`
 	install icons/release-dev.png            `${PYTHON} -c 'import news_config; print news_config.icon_path'`
+	install icons/wilber_eeek.png            `${PYTHON} -c 'import news_config; print news_config.icon_path'`
 	install icons/wilber_painter.png         `${PYTHON} -c 'import news_config; print news_config.icon_path'`
 	install icons/wilber_reading.png         `${PYTHON} -c 'import news_config; print news_config.icon_path'`
 	install icons/wilber_wizard.png          `${PYTHON} -c 'import news_config; print news_config.icon_path'`
