applied patch from Joachim Noreiko.
2005-09-26  Sven Neumann  <sven@gimp.org>

	* install.config.sample: applied patch from Joachim Noreiko.

--- a/install.config.sample
+++ b/install.config.sample
@@ -1,2 +1,2 @@
-export HTDOCS_DIR=/www/gimp.gui.org/htdocs
-export DATA_DIR=/www/gimp.gui.org/data
+export HTDOCS_DIR=/home/wgo/htdocs
+export DATA_DIR=/home/wgo/data
