programmatic/admin/news/Makefile added news icon for the Libre Graphics
2005-11-04  Sven Neumann  <sven@gimp.org>

	* programmatic/admin/news/Makefile
	* programmatic/admin/news/icons/lgm-banner-small.png: added news
	icon for the Libre Graphics Meeting.

	* programmatic/admin/news/wgo_news.py: register it.

--- a/programmatic/admin/news/Makefile
+++ b/programmatic/admin/news/Makefile
@@ -77,6 +77,7 @@ install-news: all
 	if [ ! -d "`${PYTHON} -c 'import news_config; print news_config.icon_path'`" ]; then install -m 755 -d `${PYTHON} -c 'import news_config; print news_config.icon_path'`; fi
 	install icons/gimp_code.png              `${PYTHON} -c 'import news_config; print news_config.icon_path'`
 	install icons/gimp_construction.png      `${PYTHON} -c 'import news_config; print news_config.icon_path'`
+	install icons/lgm-banner-small.png       `${PYTHON} -c 'import news_config; print news_config.icon_path'`
 	install icons/release-0.1.png            `${PYTHON} -c 'import news_config; print news_config.icon_path'`
 	install icons/release-dev.png            `${PYTHON} -c 'import news_config; print news_config.icon_path'`
 	install icons/wilber_eeek.png            `${PYTHON} -c 'import news_config; print news_config.icon_path'`
