install.sh If $PYTHON is not specified in the environment, use just
2007-10-07  Raphael Quinet  <raphael@gimp.org>

	* install.sh
	* programmatic/Makefile.defs: If $PYTHON is not specified in the
	environment, use just 'python' (or 'python2.4' if available)
	instead of the obsolete 'python2.2'.

svn path=/branches/v2.4/; revision=1591

--- a/programmatic/Makefile.defs
+++ b/programmatic/Makefile.defs
@@ -2,7 +2,7 @@
 export DocumentRoot=""
 export LIBDIR=${DocumentRoot}/cgi-common
 export PYTHONPATH:=${LIBDIR}:${PYTHONPATH}
-export PYTHON?=python2.2
+export PYTHON?=python
 export SRCDIR?=$(shell pwd)
 
 # a few convenient transforms for making cgi scripts, css files, and
