install.sh Removed references to DataRoot and DATA_DIR because they are
2007-10-07  Raphael Quinet  <raphael@gimp.org>

	* install.sh
	* install.config.sample: Removed references to DataRoot and
	DATA_DIR because they are not used anymore by any Makefile or
	script.

	* install.exclude: SVN has replaced CVS some time ago.  Some files
	have been renamed or moved to a different location.

	* team.htrw: Updated according to the contributions made in the
	last years.  The "web team" list tries to follow the MAINTAINERS
	file, the ChangeLog file and the contributions made in Bugzilla.

svn path=/branches/v2.4/; revision=1599

--- a/install.config.sample
+++ b/install.config.sample
@@ -1,2 +1,5 @@
+# Where all HTML files and images will be installed:
 export HTDOCS_DIR=/home/wgo/htdocs
-export DATA_DIR=/home/wgo/data
+
+# Uncomment the following line if you want to use a specific version of Python:
+#export PYTHON=/usr/bin/python
