Make the mirrors script find the wgo_config module, and prevent errors if /downloads exists already

--- a/programmatic/downloads/Makefile
+++ b/programmatic/downloads/Makefile
@@ -1,6 +1,8 @@
 include ../Makefile.defs
 
-.PHONY: all install
+.PHONY: all clean install
+
+PYTHONPATH := ../
 
 all: mirrors.xhtml
 
@@ -11,5 +13,5 @@ clean:
 	/bin/rm -f mirrors.xhtml
 
 install: mirrors.xhtml
-	-mkdir `${PYTHON} -c 'import wgo_config; print wgo_config.DocumentRoot_path'`/downloads
+	-mkdir -p `${PYTHON} -c 'import wgo_config; print wgo_config.DocumentRoot_path'`/downloads
 	install -m 644 mirrors.xhtml `${PYTHON} -c 'import wgo_config; print wgo_config.DocumentRoot_path'`/downloads/mirrors.xhtml
