rediris.es is current

--- a/programmatic/downloads/MIRRORS.in
+++ b/programmatic/downloads/MIRRORS.in
@@ -95,8 +95,8 @@ South Africa
      ftp://ftp.is.co.za/mirror/ftp.gimp.org/gimp/
 
 Spain
-     http://sunsite.rediris.es/mirror/gimp/ (web access, outdated)
-     ftp://ftp.rediris.es/mirror/gimp/ (outdated)
+     http://sunsite.rediris.es/mirror/gimp/ (web access)
+     ftp://ftp.rediris.es/mirror/gimp/
 
 Sweden
 #     ftp://ftp.acc.umu.se/pub/gimp/
